--- a/Coding editor/Homework/weather.html
+++ b/Coding editor/Homework/weather.html
@@ -4,7 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Page</title>
-    <style></style>
+    <style>
+      .container {
+        margin: 0 auto;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div>Icon</div>
+      <div>Currently 21 in Tokyo</div>
+      <div>13 / 23</div>
+      <div>
+        Tomorrow
+        <div>10 / 22</div>
+      </div>
+      <div>
+        Saturday
+        <div>15 / 17</div>
+      </div>
+
+      <div>
+        Sunday
+        <div>25 / 28</div>
+      </div>
+
+      <div>Created by Nokhwezi P</div>
+    </div>
+  </body>
 </html>
