added icons and degree symbols

--- a/Coding editor/Homework/weather.html
+++ b/Coding editor/Homework/weather.html
@@ -6,27 +6,30 @@
     <title>Weather Page</title>
     <style>
       .container {
-        margin: 0 auto;
+        text-align: center;
+      }
+      .main-icon {
+        font-size: 40px;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <div>Icon</div>
-      <div>Currently 21 in Tokyo</div>
-      <div>13 / 23</div>
+      <div class="main-icon">🌤</div>
+      <div>Currently 21&deg; in Tokyo</div>
+      <div>13&deg; / 23&deg;</div>
       <div>
-        Tomorrow
-        <div>10 / 22</div>
+        🌧Tomorrow
+        <div>10&deg; / 22&deg;</div>
       </div>
       <div>
-        Saturday
-        <div>15 / 17</div>
+        🌥Saturday
+        <div>15&deg; / 17&deg;</div>
       </div>
 
       <div>
-        Sunday
-        <div>25 / 28</div>
+        ☀️Sunday
+        <div>25&deg; / 28&deg;</div>
       </div>
 
       <div>Created by Nokhwezi P</div>
