added some spacing and a change city button

--- a/Coding editor/Homework/weather.html
+++ b/Coding editor/Homework/weather.html
@@ -18,20 +18,25 @@
       <div class="main-icon">🌤</div>
       <div>Currently 21&deg; in Tokyo</div>
       <div>13&deg; / 23&deg;</div>
-      <div>
+      <br />
+      <div class="days">
         🌧Tomorrow
         <div>10&deg; / 22&deg;</div>
       </div>
-      <div>
+      <br />
+      <div class="days">
         🌥Saturday
         <div>15&deg; / 17&deg;</div>
       </div>
-
-      <div>
+      <br />
+      <div class="days">
         ☀️Sunday
         <div>25&deg; / 28&deg;</div>
       </div>
-
+      <br />
+      <button class="button">Change city</button>
+      <br />
+      <br />
       <div>Created by Nokhwezi P</div>
     </div>
   </body>
