--- a/Coding editor/Homework/weather.html
+++ b/Coding editor/Homework/weather.html
@@ -9,15 +9,34 @@
         text-align: center;
       }
       .main-icon {
-        font-size: 40px;
+        font-size: 30px;
+      }
+      h1 {
+        color: #1A64D6;
+        font-weight: 600;
+      }
+      .days {
+        font-size: 16px;
+      }
+      .button {
+        background-color: #1A64D6;
+        color: #ffffff;
+        padding: 20px;
+        border-radius: 40px;
+        border: 1px solid;
+      }
+      .button:hover {
+        background: transparent;
+        color: #1A64D6;
+        border: 1px solid #1A64D6;
       }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="main-icon">🌤</div>
-      <div>Currently 21&deg; in Tokyo</div>
-      <div>13&deg; / 23&deg;</div>
+      <h1>Currently 21&deg; in Tokyo</h1>
+      <strong>13&deg; / 23&deg;</strong>
       <br />
       <div class="days">
         🌧Tomorrow
