--- a/Coding editor/Homework/weather.html
+++ b/Coding editor/Homework/weather.html
@@ -7,7 +7,8 @@
     <style>
       .container {
         text-align: center;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+          sans-serif;
       }
       .main-icon {
         font-size: 25px;
@@ -40,6 +41,8 @@
         padding: 20px;
         border-radius: 40px;
         border: 1px solid;
+        display: block;
+        margin: 20px auto 0;
       }
       .button:hover {
         background: transparent;
@@ -55,30 +58,30 @@
     <div class="container">
       <div class="main-icon">🌤</div>
       <div class="content">
-      <h1>Currently 21&deg; in Tokyo</h1>
-      <p class="main-temp">13&deg; / <strong>23&deg;</strong></p>
-      <br />
-      <div class="days">
-        🌧 <strong>Tomorrow</strong> <br />
-        <span>10&deg; / <strong>22&deg;</strong></span>
-      </div>
-      <br />
-      <div class="days">
-        🌥 <strong>Saturday</strong>
+        <h1>Currently 21&deg; in Tokyo</h1>
+        <p class="main-temp">13&deg; / <strong>23&deg;</strong></p>
         <br />
-        <span>15&deg; / <strong>17&deg;</strong></span>
-      </div>
-      <br />
-      <div class="days">
-        ☀️ <strong>Sunday</strong>
+        <div class="days">
+          🌧 <strong>Tomorrow</strong> <br />
+          <span>10&deg; / <strong>22&deg;</strong></span>
+        </div>
         <br />
-        <span>25&deg; / <strong>28&deg;</strong></span>
+        <div class="days">
+          🌥 <strong>Saturday</strong>
+          <br />
+          <span>15&deg; / <strong>17&deg;</strong></span>
+        </div>
+        <br />
+        <div class="days">
+          ☀️ <strong>Sunday</strong>
+          <br />
+          <span>25&deg; / <strong>28&deg;</strong></span>
+        </div>
       </div>
-      </div>
-      <br />
       <button class="button">Change city</button>
       <br />
       <br />
-      <div footer="footer">Code by Nokhwezi P </div>
+      <div footer="footer">Code by Nokhwezi P</div>
+    </div>
   </body>
 </html>
