changed the sizing of the content to be a little more smaller

--- a/Coding editor/Homework/weather.html
+++ b/Coding editor/Homework/weather.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Page</title>
     <style>
+      body {
+        transform: scale(0.9);
+        transform-origin: top center;
+      }
       .container {
         text-align: center;
         font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
@@ -50,7 +54,8 @@
         border: 1px solid #1a64d6;
       }
       .footer {
-        font-weight: 100;
+         font-weight: 100; 
+        color: #666666;
       }
     </style>
   </head>
@@ -81,7 +86,7 @@
       <button class="button">Change city</button>
       <br />
       <br />
-      <div footer="footer">Code by Nokhwezi P</div>
+      <div class="footer">Code by Nokhwezi Philander</div>
     </div>
   </body>
 </html>
