--- a/Coding editor/Homework/weather.html
+++ b/Coding editor/Homework/weather.html
@@ -11,15 +11,14 @@
       }
       .container {
         text-align: center;
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
+        font-family:monospace
       }
       .main-icon {
         font-size: 25px;
       }
       .content {
         display: inline-block;
-        text-align: center; /* Ensures text inside .weather-block is centered */
+        text-align: center; 
         width: max-content;
       }
       .content h1 {
