--- a/Coding editor/Homework/weather.html
+++ b/Coding editor/Homework/weather.html
@@ -11,7 +11,7 @@
       }
       .container {
         text-align: center;
-        font-family:monospace
+        font-family:Arial, Helvetica, sans-serif
       }
       .main-icon {
         font-size: 25px;
@@ -24,6 +24,7 @@
       .content h1 {
         color: #1a64d6;
         font-weight: 600;
+        margin: auto;
       }
       .main-temp {
         margin: auto;
