final touches with a line height and changed github hyperlink

--- a/Coding editor/Basics Final Project/anime.html
+++ b/Coding editor/Basics Final Project/anime.html
@@ -40,6 +40,8 @@
         border: 1px dashed #9c9552;
         padding: 10px;
         background-color: #ba91a0;
+        line-height: 2.1;
+        font-size: 13px;
       }
 
       .gallery {
@@ -113,11 +115,11 @@
       <h1>ANIME 🤌🏽🤌🏽🤌🏽</h1>
       <h2>What's your favourite anime from the gallery?</h2>
       <hr />
-      <em><p>There are thousands of availble anime online today!</p></em>
+      <em><p>There are thousands of available anime online today!</p></em>
       <p class="description">
         Did you know that it has been more than <strong>7 years</strong> since
         <span class="aot">Attack on Titan</span> was released? It feels just
-        like yesteday when we watched history on our screens
+        like yesterday when we watched history on our screens.
       </p>
       <hr />
       <br />
@@ -156,7 +158,7 @@
       <p class="footer">
         This page was built by
         <a
-          href="https://github.com/nphilander/SheCodes-Nokhwezi/tree/main/Coding%20editor"
+          href="https://github.com/nphilander/SheCodes-Nokhwezi/tree/main/Coding%20editor/Basics%20Final%20Project"
           target="_blank"
         >
           Nokhwezi Philander
