(feat): added javascript functionality for the search button and the text change on search click for the city.

--- a/Coding editor/SheCodes Plus/Homework 1/index.html
+++ b/Coding editor/SheCodes Plus/Homework 1/index.html
@@ -51,6 +51,7 @@
         </li>
       </ul>
     </div>
+    <script src="script.js"></script>
     <footer>This project was coded by Nokhwezi Philander</footer>
   </body>
 </html>
